<?xml version="1.0"?>
<package format="3">
  <name>avoidance</name>
  <version>0.2.0</version>
  <description>avoidance is a ROS 2 package for computer vision-based navigation</description>

  <maintainer email="pixhawk@todo.todo">Pixhawk Team</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/PX4/avoidance</url>
  <url type="repository">https://github.com/PX4/avoidance.git</url>
  <url type="bugtracker">https://github.com/PX4/avoidance/issues</url>

  <!-- Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- Gazebo Ignition Dependencies -->
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>gz-sim9</build_depend>
  <build_depend>gz-math8</build_depend>
  <build_depend>gz-transport14</build_depend>
  <build_depend>gz-msgs11</build_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Gazebo Ignition Runtime Dependencies -->
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ignition-gazebo9</exec_depend>
  <exec_depend>ignition-math6</exec_depend>
  <exec_depend>ignition-transport9</exec_depend>
  <exec_depend>ignition-msgs5</exec_depend>

  <!-- Testing Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
